codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_with_details_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
  └ First detail line                           
    Second detail line                          
                                                
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
› Ask Codex to do anything                      
                                                
  ? 查 看 快 捷 键                  100% 上 下 文 剩 余
